Fix z-index of profile menu so it appears on top of footer

--- a/cd-footer/cd-footer.less
+++ b/cd-footer/cd-footer.less
@@ -1,4 +1,6 @@
 .cd-footer {
+  position: relative;
+  z-index: 1002;
   background: @cd-dark-grey;
   color: @cd-white;
   padding: 15px 30px;
